@@ -17,6 +17,7 @@ import org.apache.commons.io.FilenameUtils;
 import solutions.bellatrix.core.utilities.FileDownloader;
 import solutions.bellatrix.core.utilities.RuntimeInformation;
 
+import java.io.IOException;
 import java.nio.file.Paths;
 
 public class FFmpegVideoRecorder implements AutoCloseable {
@@ -24,13 +25,13 @@ public class FFmpegVideoRecorder implements AutoCloseable {
     public void close() {
         try {
             if (RuntimeInformation.IS_WINDOWS) {
-                Runtime.getRuntime().exec("taskkill /IM ffmpeg_windows.exe /F");
+                new ProcessBuilder("taskkill", "/IM", "ffmpeg_windows.exe", "/F").start().waitFor();
             } else if (RuntimeInformation.IS_MAC) {
-                Runtime.getRuntime().exec("killall ffmpeg_osx");
+                new ProcessBuilder("killall", "ffmpeg_osx").start().waitFor();
             } else {
-                Runtime.getRuntime().exec("killall ffmpeg_linux");
+                new ProcessBuilder("killall", "ffmpeg_linux").start().waitFor();
             }
-        } catch (Exception e) {
+        } catch (IOException | InterruptedException e) {
             e.printStackTrace();
         }
     }
@@ -41,21 +42,23 @@ public class FFmpegVideoRecorder implements AutoCloseable {
             if (RuntimeInformation.IS_WINDOWS) {
                 var recorderFile = FileDownloader.downloadToUsersFolder("https://github.com/AutomateThePlanet/BELLATRIX/releases/download/1.0/ffmpeg_windows.exe");
                 var videoFilePathWithExtension = String.format("%s.mpg", FilenameUtils.removeExtension(videoFullPath));
-                var args = recorderFile + " -f gdigrab" + " -framerate 30" + String.format(" -i desktop %s", videoFilePathWithExtension);
-                Runtime.getRuntime().exec(args);
+                var args = new String[]{recorderFile, "-f", "gdigrab", "-framerate", "30", "-i", "desktop", videoFilePathWithExtension};
+                new ProcessBuilder(args).start();
                 return videoFilePathWithExtension;
             } else if (RuntimeInformation.IS_MAC) {
                 var recorderFile = FileDownloader.downloadToUsersFolder("https://github.com/AutomateThePlanet/BELLATRIX/releases/download/1.0/ffmpeg_osx");
                 var videoFilePathWithExtension = String.format("%s.mkv", FilenameUtils.removeExtension(videoFullPath));
-                Runtime.getRuntime().exec(recorderFile + " -f avfoundation" + " -framerate 10" + String.format(" -i \"0:0\" %s", videoFilePathWithExtension));
+                var args = new String[]{recorderFile, "-f", "avfoundation", "-framerate", "10", "-i", "\"0:0\"", videoFilePathWithExtension};
+                new ProcessBuilder(args).start();
                 return videoFilePathWithExtension;
             } else {
                 var recorderFile = FileDownloader.downloadToUsersFolder("https://github.com/AutomateThePlanet/BELLATRIX/releases/download/1.0/ffmpeg_linux");
                 var videoFilePathWithExtension = String.format("%s.mp4", FilenameUtils.removeExtension(videoFullPath));
-                Runtime.getRuntime().exec(recorderFile + " -f x11grab" + " -framerate 30" + String.format(" -i :0.0+100,200 %s", videoFilePathWithExtension));
+                var args = new String[]{recorderFile, "-f", "x11grab", "-framerate", "30", "-i", ":0.0+100,200", videoFilePathWithExtension};
+                new ProcessBuilder(args).start();
                 return videoFilePathWithExtension;
             }
-        } catch (Exception e) {
+        } catch (IOException e) {
             e.printStackTrace();
         }
 
